--- a/public/styles.css
+++ b/public/styles.css
@@ -1,86 +1,20 @@
 body {
-		margin: auto;
-		padding: 20px;
-		font-family: -apple-system, 'Poppins', BlinkMacSystemFont, sans-serif;
-		overflow: auto;
-		background: linear-gradient(315deg, rgba(101,0,94,1) 3%, rgba(60,132,206,1) 38%, rgba(48,238,226,1) 68%, rgba(255,25,25,1) 98%);
-		animation: gradient 15s ease infinite;
-		background-size: 400% 400%;
-		background-attachment: fixed;
-}
-
-@keyframes gradient {
-		0% {
-				background-position: 0% 0%;
-		}
-		50% {
-				background-position: 100% 100%;
-		}
-		100% {
-				background-position: 0% 0%;
-		}
-}
-
-.wave {
-		background: rgb(255 255 255 / 25%);
-		border-radius: 1000% 1000% 0 0;
-		position: fixed;
-		width: 200%;
-		height: 12em;
-		animation: wave 10s -3s linear infinite;
-		transform: translate3d(0, 0, 0);
-		opacity: 0.8;
-		bottom: 0;
-		left: 0;
-		z-index: -1;
-}
-
-.wave:nth-of-type(2) {
-		bottom: -1.25em;
-		animation: wave 18s linear reverse infinite;
-		opacity: 0.8;
-}
-
-.wave:nth-of-type(3) {
-		bottom: -2.5em;
-		animation: wave 20s -1s reverse infinite;
-		opacity: 0.9;
-}
-
-@keyframes wave {
-		2% {
-				transform: translateX(1);
-		}
-
-		25% {
-				transform: translateX(-25%);
-		}
-
-		50% {
-				transform: translateX(-50%);
-		}
-
-		75% {
-				transform: translateX(-25%);
-		}
-
-		100% {
-				transform: translateX(1);
-		}
-}
-
-.container {
-	   color: #FFFF;
-	   background: #000000;
-		 border-radius: 10px;
 		 padding: 20px;
-	   box-shadow: 0 0 .2rem #fff,0 0 .2rem #fff, 0 0 2rem #1F51FF,
-            0 0 0.8rem #1F51FF,
-            0 0 2.8rem #1F51FF,
-            inset 0 0 1.3rem #1F51FF;
+		 background-image: url("https://i.postimg.cc/ZnGkJSMh/0aaee5b9fccabe60b3b5fef887d12f37.jpg");
+		 background-size: cover;
+		 font-family: 'Poppins', sans-serif;
+	   border-radius: 10px;
+}
+ .container {
+	   color: #FFFF;
+	   background: transparent;
+	   backdrop-filter: blur(10px);
+		 border-radius: 10px;
+		 box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+		 padding: 20px;
 		 margin-top: 20px;
 		 margin-bottom: 20px;
-	 outline: 2px solid #FFFFFF;
+	  outline: 2px solid #FFFFFF;
 }
  h1 {
 		 color: #FFFFFF;
@@ -108,13 +42,14 @@ body {
 		 resize: none;
 }
  .btn-primary {
-		 background-color: #00ff00;
+		 background-color: #007bff;
 		 border: 1px solid #007bff;
-	   color: #261a1a;
+	   outline: 2px solid #FFFFFF;
 }
  .btn-primary:hover {
-		 background-color: #76d674;
+		 background-color: #0056b3;
 		 border: 1px solid #0056b3;
+	   outline: 2px solid #FFFFFF;
 }
  .success-message {
 		 color: green;
@@ -209,7 +144,7 @@ div {
 
 video {
 	max-width: 100%;
-	max-height: 40%;
+	max-height: 70%;
 	margin-bottom: 20px;
 	cursor: default;
 	outline: 2px solid #FFFFFF;
@@ -232,21 +167,15 @@ to {
  }
 
 #video-container {
-	
 	width: 100%;
-	height: 100%;
+	height: 70%;
 	margin-bottom: 20px;
-	display: flex;
 }
 
 #video {
-				overflow: hidden;
-				display: flex;
-				justify-content: center;
-				align-items: center;
 	 width: 100%;
 	 border-radius: 10px;
-	 height: 100%;
+	 height: 70%%;
 	 object-fit: cover;
 	 margin: auto;
-}
+	 }
